--- a/toggle-menu.html
+++ b/toggle-menu.html
@@ -3,7 +3,7 @@
     <div class="linked-toggle-header">
         <h3>
             <span>Linked Toggles</span>
-            <a href="example.com" class="notes-link" target="_blank">
+            <a href="https://github.com/splitclover/chat-toggle-groups" class="notes-link" target="_blank">
                 <span class="fa-solid fa-circle-question note-link-span"></span>
             </a>
         </h3>
