Added animations for toggles

--- a/toggle-menu.html
+++ b/toggle-menu.html
@@ -7,10 +7,17 @@
                 <span class="fa-solid fa-circle-question note-link-span"></span>
             </a>
         </h3>
-    </div>
-    <div class="menu_button menu_button_icon add-toggle-group interactable" title="Add a new toggle group" style="margin-top: 10px;" tabindex="0">
-        <i class="fa-solid fa-plus"></i>
-        <span>Add New Group</span>
+        <div class="toggle-group-header-row">
+            <div class="menu_button menu_button_icon add-toggle-group interactable" title="Add a new toggle group" tabindex="0">
+                <i class="fa-solid fa-plus"></i>
+                <span>Add New Group</span>
+            </div>
+            <div class="disable-animation-container">
+                <label for="disable-animation-checkbox" class="disable-animation-label">
+                    <input type="checkbox" id="disable-animation-checkbox"> Disable Animation
+                </label>
+            </div>
+        </div>
     </div>
     <div class="toggle-groups">
         <!-- Drawers will be dynamically added here -->
